--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,20 @@
 akka {
-  loglevel = "INFO"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  loglevel = "DEBUG"
 
   actor {
     provider = cluster
+    debug {
+      # enable function of LoggingReceive, which is to log any received message at
+      # DEBUG level
+      receive = on
+      #lifecycle = on
+
+    }
   }
   remote {
-    log-remote-lifecycle-events = off
+    log-remote-lifecycle-events = on
     netty.tcp {
       hostname = "127.0.0.1"
       port = 0
